@@ -1,3 +1,7 @@
+Wed Aug 16 22:19:47 UTC 2006  Steve Huston  <shuston@riverace.com>
+
+        * ace/Acceptor.h: Doxygen improvements.
+
 Wed Aug 16 17:42:02 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>
 
         * ace/Numeric_Limits.h:
